# slarti

./: .gitignore  Cargo.toml  README.md  agents.md
crates/slarti/: Cargo.toml
crates/slarti-host/: Cargo.toml
crates/slarti-host/src/: lib.rs
crates/slarti-hosts/: Cargo.toml
crates/slarti-hosts/src/: lib.rs
crates/slarti-proto/: Cargo.toml
crates/slarti-proto/src/: lib.rs
crates/slarti-remote/: Cargo.toml
crates/slarti-remote/src/: main.rs
crates/slarti-ssh/: Cargo.toml
crates/slarti-ssh/src/: lib.rs  main.rs
crates/slarti-sshcfg/: Cargo.toml
crates/slarti-sshcfg/src/: lib.rs
crates/slarti-term/: Cargo.toml
crates/slarti-term/src/: lib.rs
crates/slarti-ui/: Cargo.toml
crates/slarti-ui/src/: lib.rs
crates/slarti/src/: main.rs
docs/: gpui-window-manager.md  roadmap-remote.md  roadmap.md
