[workspace]
members = [
    "crates/slarti",
    "crates/slarti-term",
    "crates/slarti-remote",
    "crates/slarti-ssh",
    "crates/slarti-proto",
    "crates/slarti-ui",
    "crates/slarti-sshcfg",
    "crates/slarti-hosts",
    "crates/slarti-host",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
dirs-next = "2"
portable-pty = "0.8"
gpui = { git = "https://github.com/zed-industries/zed" }
alacritty_terminal = { git = "https://github.com/alacritty/alacritty", package = "alacritty_terminal" }
slarti-ui = { path = "crates/slarti-ui" }
slarti-sshcfg = { path = "crates/slarti-sshcfg" }
slarti-hosts = { path = "crates/slarti-hosts" }
slarti-host = { path = "crates/slarti-host" }
