[package]
name = "slarti"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
gpui = { workspace = true }
portable-pty = { workspace = true }
alacritty_terminal = { workspace = true }
