[package]
name = "slarti"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
gpui = { workspace = true }
dirs-next = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
slarti-term = { path = "../slarti-term" }
slarti-ui = { path = "../slarti-ui" }
slarti-sshcfg = { path = "../slarti-sshcfg" }
slarti-hosts = { path = "../slarti-hosts" }
slarti-host = { path = "../slarti-host" }
slarti-proto = { path = "../slarti-proto" }
slarti-ssh = { path = "../slarti-ssh" }
